--- a/package.json
+++ b/package.json
@@ -2,42 +2,43 @@
   "name": "jsonforms-react-seed",
   "version": "0.1.1",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@jsonforms/core": "3.4.1",
     "@jsonforms/material-renderers": "3.4.1",
     "@jsonforms/react": "3.4.1",
-    "@mui/icons-material": "^6.1.0",
+    "@mui/icons-material": "^6.1.8",
     "@mui/lab": "6.0.0-beta.9",
-    "@mui/material": "^6.1.0",
-    "@mui/x-date-pickers": "^7.17.0",
+    "@mui/material": "^6.1.8",
+    "@mui/x-date-pickers": "^7.22.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.0",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/node": "^20.17.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "@vitest/coverage-v8": "^1.6.0",
-    "cypress": "^13.11.0",
-    "eslint": "^8",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "jsdom": "^24.1.0",
-    "prettier": "^3.3.1",
-    "start-server-and-test": "^2.0.4",
+    "cypress": "^13.16.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "jsdom": "^24.1.3",
+    "prettier": "^3.3.3",
+    "start-server-and-test": "^2.0.8",
     "typescript": "~5.4.5",
-    "vite": "^5.2.12",
+    "vite": "^5.4.11",
     "vitest": "^1.6.0"
   },
   "scripts": {
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "format": "prettier --write \"**/*.{ts,tsx,md,css,scss}\"",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .  --max-warnings 0",
     "start": "vite preview --port 3000",
     "test": "vitest run --coverage",
     "cypress:open": "cypress open",
