--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "cypress": "^13.16.0",
     "eslint": "^9.15.0",
+    "@eslint/migrate-config": "^1.3.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "jsdom": "^24.1.3",
@@ -38,7 +39,7 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "format": "prettier --write \"**/*.{ts,tsx,md,css,scss}\"",
-    "lint": "eslint .  --max-warnings 0",
+    "lint": "eslint . --max-warnings 0",
     "start": "vite preview --port 3000",
     "test": "vitest run --coverage",
     "cypress:open": "cypress open",
